build/errors/error16.txt
adam@dig:~/openhip-openhip-7ca0bd5421a5$ make
make  all-recursive
make[1]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Making all in src
make[2]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
make[3]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_esp.o -MD -MP -MF .deps/hip-hip_esp.Tpo -c -o hip-hip_esp.o `test -f 'usermode/hip_esp.c' || echo './'`usermode/hip_esp.c
In file included from usermode/hip_esp.c:70:0:
usermode/hip_esp.c: In function ‘send_icmp’:
./include/win32/checksum.h:75:14: warning: ‘*((void *)&icmp_parameter_problem+26)’ is used uninitialized in this function [-Wuninitialized]
       sum += *p++;
              ^~~~
mv -f .deps/hip-hip_esp.Tpo .deps/hip-hip_esp.Po
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_sadb.o -MD -MP -MF .deps/hip-hip_sadb.Tpo -c -o hip-hip_sadb.o `test -f 'usermode/hip_sadb.c' || echo './'`usermode/hip_sadb.c
usermode/hip_sadb.c: In function ‘hip_sadb_add’:
usermode/hip_sadb.c:393:7: warning: implicit declaration of function ‘des_set_odd_parity’; did you mean ‘DES_set_odd_parity’? [-Wimplicit-function-declaration]
       des_set_odd_parity((des_cblock*)key1);
       ^~~~~~~~~~~~~~~~~~
       DES_set_odd_parity
usermode/hip_sadb.c:393:27: error: ‘des_cblock’ undeclared (first use in this function); did you mean ‘DES_cblock’?
       des_set_odd_parity((des_cblock*)key1);
                           ^~~~~~~~~~
                           DES_cblock
usermode/hip_sadb.c:393:27: note: each undeclared identifier is reported only once for each function it appears in
usermode/hip_sadb.c:393:38: error: expected expression before ‘)’ token
       des_set_odd_parity((des_cblock*)key1);
                                      ^
usermode/hip_sadb.c:394:38: error: expected expression before ‘)’ token
       des_set_odd_parity((des_cblock*)key2);
                                      ^
usermode/hip_sadb.c:395:38: error: expected expression before ‘)’ token
       des_set_odd_parity((des_cblock*)key3);
                                      ^
usermode/hip_sadb.c:396:13: warning: implicit declaration of function ‘des_set_key_checked’; did you mean ‘DES_set_key_checked’? [-Wimplicit-function-declaration]
       err = des_set_key_checked((des_cblock*)key1, entry->ks[0]);
             ^~~~~~~~~~~~~~~~~~~
             DES_set_key_checked
usermode/hip_sadb.c:396:45: error: expected expression before ‘)’ token
       err = des_set_key_checked((des_cblock*)key1, entry->ks[0]);
                                             ^
usermode/hip_sadb.c:397:46: error: expected expression before ‘)’ token
       err += des_set_key_checked((des_cblock*)key2, entry->ks[1]);
                                              ^
usermode/hip_sadb.c:398:46: error: expected expression before ‘)’ token
       err += des_set_key_checked((des_cblock*)key3, entry->ks[2]);
                                              ^
Makefile:1019: recipe for target 'hip-hip_sadb.o' failed
make[3]: *** [hip-hip_sadb.o] Error 1
make[3]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:1151: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:422: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Makefile:357: recipe for target 'all' failed
make: *** [all] Error 2
